pemFioi/quickAlgo/quickAlgo-mobileFirst.css
/* ... */
#editorMenu .editorActions div {
  flex: 1 1 0;
  padding: 20px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-top: 1px solid #5c5c5c;
  cursor: pointer;
  text-align: center;
}
#editorMenu .editorActions div:hover {
  color:#4a90e2;
}
#editorMenu .editorActions div:first-child {
  border-top: none;
}
#editorMenu .editorActions div span.fas,
#editorMenu .editorActions div span.far {
  font-size: 32px;
}
#editorMenu #saveUrl {
  display: none;
}
#editorMenu input[type=file] {
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 0;
  -moz-opacity: 0;
  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
}

/*****************
  LAYOUT
*****************/
#task {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  height: calc(100vh - 40px);
}
#taskContent {
  flex: 2 0 0;
  position: static !important;
  display: flex;
  justify-content: stretch;
}
h2.sectionTitle {
  font-size: 22px;
  font-weight: lighter;
  color: #4a90e2;
  margin: 0;
}
h2.sectionTitle .icon {
  color: #fff;
  background-color: #4a90e2;
  border-radius: 50%;
  width: 2em;
  line-height: 2em;
  text-align: center;
  font-size: 14px;
  vertical-align: text-bottom;
  margin-right: 10px;
}
/************************
  DISPLAY HELPER ELEMENTS
*************************/
#displayHelperAnswering {
  display: none;
}

/*****************
  TASK DESCRIPTION
*****************/
#taskIntro {
  padding: 10px 20px;
  overflow: auto;
  color: #9b9b9b;
}


/*****************
  TASK GRID & TESTS
*****************/
#grid {
  overflow: auto;
  max-width: 100vw;
  padding: 2em 0px;
}
#testSelector {
    padding-left: 10px;
}
.testResult {
    margin-left: 10px;
    padding: 3px;
    padding-left: 5px;
    padding-right: 5px;
    border-radius: 50px;
    color: #FFFFFF;
    width: 250px;
    font-size: 12px;
    font-weight: 500;
}
.testResult.testSuccess {
    background-color: green;
}
.testResult.testPartial {
    background-color: orange;
}
.testResult.testFailure {
    background-color: red;
}
.testResult.testEvaluating {
    background-color: purple;
}
.testResultIcon {
  display: inline-block;
  width: 21px;
  height: 21px;
  line-height: 21px;
}
.testResultIcon.testSuccess span {
  background: #b8e986;
  border-radius: 100%;
  color: #fff;
}
.testResultIcon.testPartial,
.testResultIcon.testFailure {
  color: #ff001f;
}

#gridButtonsAfter #testSelector {
  padding: 0;
}
#testSelector .tabs {
  display: flex;
  min-height: 24px;
  line-height: 24px;
  background-color: #f1f2f7;
  text-align: center;
}
#testSelector .tabs .testTab {
  flex: 1 0 auto;
  cursor: pointer;
  padding: 2px;
  text-transform: uppercase;
  position: relative;
}
#testSelector .testTab.currentTest {
  box-shadow: 0 1px 0 0px #ccc;
  color: #4a90e2;
  border-radius: 0 0 10px 10px;
  background-color: #fff;
}
#testSelector .testTab.currentTest::before,
#testSelector .testTab.currentTest:not(:last-child)::after {
  content: " ";
  position: absolute;
  width: 10px;
  height: 10px;
  background: transparent;
}
#testSelector .testTab.currentTest::before {
  top: -3px;
  border-radius: 0 70%;
  box-shadow: 0px 1px 0 #ccc inset;
  left: -10px;
  z-index: 1;
  border-top: 3px solid #fff;
  border-right: 6px solid #fff;
}
#testSelector .testTab.currentTest::after {
  top: -3px;
  border-radius: 70% 0;
  box-shadow: 0px 1px 0 #ccc inset;
  right: -10px;
  z-index: 1;
  border-top: 3px solid #fff;
  border-left: 6px solid #fff;
}
#testSelector .tabs .testTab:not(.currentTest) {
  box-shadow: 0 1px 0 0px #ccc inset;
  color: #ababac;
}

/*****************
  PLAYER CONTROLS
*****************/
#playerControls {
  display: inline-flex;
  justify-content: space-between;
  width: 100%;
  margin: 0 10px;
  vertical-align: bottom;
  background-color: rgba(0,0,0,0.3);
  box-shadow:inset 0 1px 0 0 rgba(0,0,0,0.50);
  border-radius:15px;
}
.speedControls .icon span {
  padding: 5px 10px;
}
@media screen and (max-width: 480px) {
  #mode-player.displaySpeedSlider #playerControls,
  #mode-player.displaySpeedSlider > span.far,
  #mode-player.displaySpeedSlider > span.fas {
    display: none;
  }
  #mode-player:not(.displaySpeedSlider) #speedSlider {
    display: none;
  }
}
@media screen and (min-width: 481px) {
  .icon.displaySpeedSlider,
  .icon.hideSpeedSlider {
    display: none;
  }
}
/*****************
  SPEED CONTROLS
*****************/

#taskToolbar .mode:not(.active) .speedControls {
  display: none;
}
#taskToolbar .mode .speedControls {
  display: flex;
  justify-content: center;
  align-items: center;
}
#speedSlider {
  background-color: rgba(0,0,0,0.3);
  box-shadow:inset 0 1px 0 0 rgba(0,0,0,0.50);
  border-radius:15px;
  display: flex;
}
#speedCursor {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  width: 100px;
  margin-top: 6px;
}
/* Chrome */
#speedCursor::-webkit-slider-runnable-track {
  background-color: rgba(0,0,0,0.3);
  width: 100px;
  height: 5px;
  border-radius: 5px;
  margin-top: -6px;
}
#speedCursor::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: none;
  height: 20px;
  width: 28px;
  border-radius: 100px;
  background-color: #4a90e2;
  margin-top: -7px;
  cursor: ew-resize;
}
#speedCursor:focus {
  outline: none;
}
#speedCursor:focus::-webkit-slider-runnable-track {
  background-color: rgba(0,0,0,0.3);
}
/* Firefox */
#speedCursor::-moz-range-track {
  height: 5px;
  background-color: rgba(0,0,0,0.3);
  border: none;
  border-radius: 5px;
}
#speedCursor::-moz-range-thumb {
  border: none;
  height: 20px;
  width: 28px;
  border-radius: 100px;
  background-color: #4a90e2;
  cursor: ew-resize;
}
/* ... */

